# SebbaChaosEnhance

./: AGENTS.md  PLAN.md  README.md  config.example.yaml  install.sh  pyproject.toml
.mypy_cache/3.14/: cache.0.db  cache.1.db  cache.10.db  cache.11.db  cache.12.db  cache.13.db  cache.14.db  cache.15.db  cache.2.db  cache.3.db  cache.4.db  cache.5.db  cache.6.db  cache.7.db  cache.8.db  cache.9.db
.pi/: config.json
.pi/plans/: filter-rules.json  logwatch.json  recipe-core.json  systemd-install.json  web-dashboard.json
.pi/plans/archive/: filter-rules.json  logwatch.json  recipe-core.json  systemd-install.json  web-dashboard.json
poecraft/: __init__.py  config.py  logwatch.py  main.py  state.py
poecraft/api/: auth.py  client.py  models.py
poecraft/filter/: generator.py  reader.py  writer.py
poecraft/recipe/: classifier.py  sets.py  types.py
poecraft/web/: routes.py
poecraft/web/templates/: base.html  index.html  overlay.html
systemd/: poecraft.service
tests/: test_api_models.py  test_client.py  test_config.py  test_filter_generator.py  test_filter_integration.py  test_filter_reader.py  test_filter_writer.py  test_logwatch.py  test_sets.py  test_web.py
