[project]
name = "poecraft"
version = "0.1.0"
description = "Native Linux Chaos Recipe Filter Tool for Path of Exile"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Sebas", email = "sebas@users.noreply.github.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
poecraft = "poecraft.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
